# StageSplit

./: .gitignore  Python-First Karaoke Studio (YouTube Download + Stem Mixer + Dual-Display Video).md  README.md  index.html  issue-playback.md  main.js  main.py  package-lock.json  package.json  projector.html  pyproject.toml  renderer.js  styles.css
docs/: PythonFirst_KaraokeApp_Prompt.txt  playback.md
